<resources>
    <string name="app_name" translatable="false">SnapCoding</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="auth_subtitle">And start your sharing your coding story</string>
    <string name="login_illustration">Login Illustration</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="story_picture">Story Picture</string>
    <string name="stories" translatable="false">Stories</string>
    <string name="post_date">Posted at %1$s</string>
    <string name="camera_shutter">Camera Shutter</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="create_new_story">Create New Story</string>
    <string name="upload">Upload</string>
    <string name="picture_to_be_uploaded">Picture to be uploaded</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_chooser_title">Pick Your Story</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">Oops.. something went wrong.</string>

    <!-- Key String -->
    <string name="transition_photo" translatable="false">transition_photo</string>
    <string name="transition_name" translatable="false">transition_name</string>

    <!-- Validation, Success and Error String -->
    <string name="error_field_length">Field must be at least 8 characters</string>
    <string name="error_confirm_password">Password do not match</string>
    <string name="error_email_invalid">Please input valid email</string>
    <string name="error_name_empty">Name can not be empty</string>
    <string name="error_email_empty">Email can not be empty</string>
    <string name="error_password_empty">Password can not be empty</string>
    <string name="error_desc_empty">Description can not be empty</string>
    <string name="error_image_empty">Photo can not be empty</string>
    <string name="error_location_not_granted">Location access not permitted</string>
    <string name="permission_not_granted">Failed to get permission</string>
    <string name="failed_camera">Failed to open camera</string>
    <string name="failed_take_photo">Failed to take photo</string>
    <string name="success_take_photo">Photo taken successfully</string>
    <string name="success_create_story">New story created successfully</string>
    <string name="settings">Settings</string>
    <string name="registration_success">Registration Success</string>
    <string name="registration_success_subtitle">Now you can login to enjoy our app ~~~</string>

</resources>